    message instead of rendering screen if a parameter is not passed
  - XML Form text-line auto-complete now passes through parameters defined
    on the screen and transition
  - Added XML Form text-line.ac-show-value attribute which defaults to true
    and if set to false doesn't use the span by the input box to show what
    was selected
- Entity Facade:
  - Added in operator (_op) for searchFormInputs/search-form-inputs
  - Added entity.field.@default attribute with a Groovy expression to set a
    default for a field based on other fields, constants, etc
  - Added DataDocumentCondition.operator field, uses same operator values
    as XML Actions econdition.@operator

Bug Fixes:

- Fixed delete buttons not working on the Find Auto Screen
- Fixed links with images (link.image element) FTL error
- Required service parameters used to use the Groovy definition of empty
  but this is annoying for numbers and such (a zero is generally a valid
  non-empty service parameter), so now uses null for any object or zero
  length String as the definition of empty for required parameters
- Fixed issues with complex-alias where aliased entities were not add
  to list of aliased entities used and alias level function was not added
- Fixed tx cache issue where a value could be updated after putting it into
  the cache causing an attempt to read the original to get an updated value
- Changed ResourceReference.init() to use ExecutionContextFactory instead
  of ExecutionContext for cases where the object is long-lived
- Fixed search#DataDocuments issues with documentType parameter, adding it
  to the count query (was getting wrong counts because it was left out),
  set to null if an empty String as ElasticSearch treats that as a real one

===========================================================================
Release 1.4.1 - 01 Aug 2014
===========================================================================
